GNOME Bugzilla – Bug 668660
codecparsers: h264: fix parsing of VUI parameters
Last modified: 2012-01-30 15:22:24 UTC
Created attachment 206088 [details] [review] codecparsers: h264: fix parsing of VUI parameters max_dec_frame_buffering was mis-parsed because log2_max_mv_length_vertical was parsed twice.
Comment on attachment 206088 [details] [review] codecparsers: h264: fix parsing of VUI parameters Will push when back on 0.10 unless someone beats me to it.